<resources>
    <string name="app_name">FoodRecipes</string>
    <string name="searchButtonText">Search</string>
    <string name="catMenuItem">Categories</string>
    <string name="savedRecipesMenuItem">Saved Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="saveRecipeText">Save Recipe</string>
    <string name="selectDate">Select Date:</string>
    <string name="chooseDate">Choose Date</string>
    <string name="selectCategory">Select Category:</string>
    <string-array name="spinnerItems">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="addToMenu">Add to menu</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="pin">PIN:</string>
</resources>