<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.SaveRecipeActivity">
    
    <TextView
        android:id="@+id/savedRecipeTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/savedRecipeImageIv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/savedRecipeTitleTv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/selectDate"
        app:layout_constraintTop_toBottomOf="@id/savedRecipeImageIv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/savedRecipeDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDate"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/savedRecipeImageIv"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/selectCategory"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/dateTv"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/savedRecipeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/savedRecipeDateBtn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/addToMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/addToMenu" />


</androidx.constraintlayout.widget.ConstraintLayout>